--- a/tests/index.html
+++ b/tests/index.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Mocha Spec Runner</title>
-    <link rel="stylesheet" href="bower_components/mocha/mocha.css">
+    <link rel="stylesheet" href="vendor/mocha/mocha.css">
 </head>
 <body>
     <div id="mocha"></div>
-    <script src="bower_components/mocha/mocha.js"></script>
+    <script src="vendor/mocha/mocha.js"></script>
     <script>mocha.setup('bdd')</script>
-    <script src="bower_components/chai/chai.js"></script>
+    <script src="vendor/chai/chai.js"></script>
     <script>
         var assert = chai.assert;
         var expect = chai.expect;
@@ -22,6 +22,13 @@
     <!-- include spec files here... -->
     <script src="spec/test.js"></script>
 
-    <script>mocha.run()</script>
+    <script>
+    // If tests run in a real browser
+         // Can alternatively do a check on window.PHANTOMJS
+         if (navigator.userAgent.indexOf('PhantomJS') < 0) {
+             mocha
+                 .run();
+         }
+     </script>
 </body>
 </html>
