external file test

--- a/tests/index.html
+++ b/tests/index.html
@@ -18,9 +18,10 @@
     </script>
 
     <!-- include source files here... -->
+    <script src="../src/utils/query-utils.js"></script>
 
     <!-- include spec files here... -->
-    <script src="spec/test.js"></script>
+    <script src="spec/test-query-utils.js"></script>
 
     <script>
     // If tests run in a real browser
