--- a/tests/index.html
+++ b/tests/index.html
@@ -18,6 +18,8 @@
     </script>
 
     <!-- include source files here... -->
+    <script src="../vendor/underscore/underscore-min.js"></script>
+
     <script src="../src/utils/query-utils.js"></script>
 
     <!-- include spec files here... -->
