--- a/tests/index.html
+++ b/tests/index.html
@@ -21,6 +21,7 @@
     <script src="../vendor/underscore/underscore-min.js"></script>
 
     <script src="../src/utils/query-utils.js"></script>
+    <script src="../src/services/run-api-service.js"></script>
 
     <!-- include spec files here... -->
     <script src="spec/test-query-utils.js"></script>
