mass renaming spree

--- a/tests/index.html
+++ b/tests/index.html
@@ -18,13 +18,13 @@
     </script>
 
     <!-- include source files here... -->
-    <script src="../vendor/underscore/underscore-min.js"></script>
+    <script src="../vendor/underscore/underscore.js"></script>
 
-    <script src="../src/utils/query-utils.js"></script>
-    <script src="../src/services/run-api-service.js"></script>
+    <script src="../src/util/query-util.js"></script>
+    <!-- <script src="../src/service/run-api-service.js"></script> -->
 
     <!-- include spec files here... -->
-    <script src="spec/test-query-utils.js"></script>
+    <script src="spec/test-query-util.js"></script>
 
     <script>
     // If tests run in a real browser
