--- a/tests/index.html
+++ b/tests/index.html
@@ -21,6 +21,7 @@
     <script src="../vendor/underscore/underscore.js"></script>
 
     <script src="../src/util/query-util.js"></script>
+    <script src="../src/transport/ajax-http-transport.js"></script>
     <!-- <script src="../src/service/run-api-service.js"></script> -->
 
     <!-- include spec files here... -->
