--- a/tests/index.html
+++ b/tests/index.html
@@ -18,11 +18,15 @@
     </script>
 
     <!-- include source files here... -->
+    <script src="../vendor/jquery/dist/jquery.min.js"></script>
     <script src="../vendor/underscore/underscore.js"></script>
 
     <script src="../src/util/query-util.js"></script>
+    <script src="../src/service/url-config-service.js"></script>
+    <script src="../src/service/configuration-service.js"></script>
     <script src="../src/transport/ajax-http-transport.js"></script>
-    <!-- <script src="../src/service/run-api-service.js"></script> -->
+    <script src="../src/transport/http-transport-factory.js"></script>
+    <script src="../src/service/run-api-service.js"></script>
 
     <!-- include spec files here... -->
     <script src="spec/test-query-util.js"></script>
