--- a/tests/index.html
+++ b/tests/index.html
@@ -11,6 +11,7 @@
     <script src="vendor/mocha/mocha.js"></script>
     <script>mocha.setup('bdd')</script>
     <script src="vendor/chai/chai.js"></script>
+    <script src="vendor/sinon/index.js"></script>
     <script>
         var assert = chai.assert;
         var expect = chai.expect;
@@ -30,6 +31,7 @@
 
     <!-- include spec files here... -->
     <script src="spec/test-query-util.js"></script>
+    <script src="spec/test-ajax-http-transport.js"></script>
 
     <script>
     // If tests run in a real browser
