--- a/tests/index.html
+++ b/tests/index.html
@@ -32,6 +32,7 @@
     <!-- include spec files here... -->
     <script src="spec/test-query-util.js"></script>
     <script src="spec/test-ajax-http-transport.js"></script>
+    <script src="spec/test-run-api-service.js"></script>
 
     <script>
     // If tests run in a real browser
