Operation normalize utility

--- a/tests/index.html
+++ b/tests/index.html
@@ -23,6 +23,7 @@
     <script src="../vendor/underscore/underscore.js"></script>
 
     <script src="../src/util/query-util.js"></script>
+    <script src="../src/util/run-util.js"></script>
     <script src="../src/service/url-config-service.js"></script>
     <script src="../src/service/configuration-service.js"></script>
     <script src="../src/transport/ajax-http-transport.js"></script>
@@ -31,6 +32,7 @@
 
     <!-- include spec files here... -->
     <script src="spec/test-query-util.js"></script>
+    <script src="spec/test-run-util.js"></script>
     <script src="spec/test-ajax-http-transport.js"></script>
     <script src="spec/test-run-api-service.js"></script>
 
