init variable service, naming changes to be singular

--- a/tests/index.html
+++ b/tests/index.html
@@ -28,6 +28,7 @@
     <script src="../src/service/configuration-service.js"></script>
     <script src="../src/transport/ajax-http-transport.js"></script>
     <script src="../src/transport/http-transport-factory.js"></script>
+    <script src="../src/service/variable-api-service.js"></script>
     <script src="../src/service/run-api-service.js"></script>
 
     <!-- include spec files here... -->
@@ -35,6 +36,7 @@
     <script src="spec/test-run-util.js"></script>
     <script src="spec/test-ajax-http-transport.js"></script>
     <script src="spec/test-run-api-service.js"></script>
+    <script src="spec/test-variable-api-service.js"></script>
 
     <script>
     // If tests run in a real browser
