--- a/tests/index.html
+++ b/tests/index.html
@@ -24,6 +24,7 @@
 
     <script src="../src/util/query-util.js"></script>
     <script src="../src/util/run-util.js"></script>
+    <script src="../src/util/promisfy.js"></script>
     <script src="../src/service/url-config-service.js"></script>
     <script src="../src/service/configuration-service.js"></script>
     <script src="../src/transport/ajax-http-transport.js"></script>
