--- a/tests/index.html
+++ b/tests/index.html
@@ -11,6 +11,7 @@
     <script src="vendor/mocha/mocha.js"></script>
     <script>mocha.setup('bdd')</script>
     <script src="vendor/chai/chai.js"></script>
+    <script src="vendor/chai-as-promised/lib/chai-as-promised.js"></script>
     <script src="vendor/sinon/index.js"></script>
     <script>
         var assert = chai.assert;
@@ -31,6 +32,7 @@
     <script src="../src/transport/http-transport-factory.js"></script>
     <script src="../src/service/variable-api-service.js"></script>
     <script src="../src/service/run-api-service.js"></script>
+    <script src="../src/persistence/cookie-persistence-service.js"></script>
 
     <!-- include spec files here... -->
     <script src="spec/test-query-util.js"></script>
@@ -38,6 +40,7 @@
     <script src="spec/test-ajax-http-transport.js"></script>
     <script src="spec/test-run-api-service.js"></script>
     <script src="spec/test-variable-api-service.js"></script>
+    <script src="spec/test-cookie-persistence-service.js"></script>
 
     <script>
     // If tests run in a real browser
