--- a/tests/index.html
+++ b/tests/index.html
@@ -29,12 +29,13 @@
     <script src="../src/service/url-config-service.js"></script>
     <script src="../src/service/configuration-service.js"></script>
     <script src="../src/transport/ajax-http-transport.js"></script>
+    <script src="../src/transport/http-transport-factory.js"></script>
 
     <script src="../src/persistence/cookie-persistence-service.js"></script>
     <script src="../src/persistence/persistence-service-factory.js"></script>
+    <script src="../src/persistence/data-api-persistence-service.js"></script>
 
 
-    <script src="../src/transport/http-transport-factory.js"></script>
     <script src="../src/service/auth-api-service.js"></script>
     <script src="../src/service/variables-api-service.js"></script>
     <script src="../src/service/run-api-service.js"></script>
@@ -43,6 +44,8 @@
     <script src="spec/test-query-util.js"></script>
     <script src="spec/test-run-util.js"></script>
     <script src="spec/test-ajax-http-transport.js"></script>
+    <script src="spec/test-data-api-service.js"></script>
+
     <script src="spec/test-run-api-service.js"></script>
     <script src="spec/test-variables-api-service.js"></script>
     <script src="spec/test-cookie-persistence-service.js"></script>
