--- a/tests/index.html
+++ b/tests/index.html
@@ -25,7 +25,7 @@
 
     <script src="../src/util/query-util.js"></script>
     <script src="../src/util/run-util.js"></script>
-    <script src="../src/util/promisfy.js"></script>
+    <script src="../src/util/promisfy-util.js"></script>
     <script src="../src/service/url-config-service.js"></script>
     <script src="../src/service/configuration-service.js"></script>
     <script src="../src/transport/ajax-http-transport.js"></script>
@@ -43,6 +43,7 @@
     <!-- include spec files here... -->
     <script src="spec/test-query-util.js"></script>
     <script src="spec/test-run-util.js"></script>
+    <script src="spec/test-promisify-util.js"></script>
     <script src="spec/test-ajax-http-transport.js"></script>
     <script src="spec/test-data-api-service.js"></script>
 
