--- a/tests/index.html
+++ b/tests/index.html
@@ -48,6 +48,7 @@
     <script src="spec/test-data-api-service.js"></script>
 
     <script src="spec/test-run-api-service.js"></script>
+    <script src="spec/test-run-api-service-callbacks.js"></script>
     <script src="spec/test-variables-api-service.js"></script>
     <script src="spec/test-cookie-persistence-service.js"></script>
 
