removed _ dependancy in ajaxhttp

--- a/tests/sandbox.html
+++ b/tests/sandbox.html
@@ -10,15 +10,8 @@
     <script src="../vendor/jquery/dist/jquery.min.js"></script>
     <script src="../vendor/underscore/underscore.js"></script>
 
-    <script src="../src/util/query-util.js"></script>
-    <script src="../src/util/run-util.js"></script>
-    <script src="../src/util/promisfy.js"></script>
-    <script src="../src/service/url-config-service.js"></script>
-    <script src="../src/service/configuration-service.js"></script>
-    <script src="../src/transport/ajax-http-transport.js"></script>
-    <script src="../src/transport/http-transport-factory.js"></script>
-    <script src="../src/service/run-api-service.js"></script>
-    <script src="../src/service/auth-api-service.js"></script>
+    <script src="../dist/epicenter.min.js"></script>
+
 
     <!-- include spec files here... -->
 	<script src="spec/test-sandbox.js"></script>
