--- a/tests/index.html
+++ b/tests/index.html
@@ -30,9 +30,9 @@
     <script src="../src/transport/ajax-http-transport.js"></script>
     <script src="../src/transport/http-transport-factory.js"></script>
 
-    <script src="../src/persistence/cookie-persistence-service.js"></script>
-    <script src="../src/persistence/persistence-service-factory.js"></script>
-    <script src="../src/persistence/data-api-persistence-service.js"></script>
+    <script src="../src/store/cookie-store.js"></script>
+    <script src="../src/store/store-factory.js"></script>
+    <script src="../src/service/data-api-service.js"></script>
 
 
     <script src="../src/service/auth-api-service.js"></script>
@@ -48,7 +48,7 @@
     <script src="spec/test-run-api-service.js"></script>
     <script src="spec/test-run-api-service-callbacks.js"></script>
     <script src="spec/test-variables-api-service.js"></script>
-    <script src="spec/test-cookie-persistence-service.js"></script>
+    <script src="spec/test-cookie-store.js"></script>
 
     <script>
     // If tests run in a real browser
