tests for auth api

--- a/tests/index.html
+++ b/tests/index.html
@@ -45,6 +45,7 @@
     <script src="spec/test-ajax-http-transport.js"></script>
     <script src="spec/test-data-api-service.js"></script>
 
+    <script src="spec/test-auth-api-service.js"></script>
     <script src="spec/test-run-api-service.js"></script>
     <script src="spec/test-run-api-service-callbacks.js"></script>
     <script src="spec/test-variables-api-service.js"></script>
