--- a/tests/sandbox.html
+++ b/tests/sandbox.html
@@ -7,7 +7,8 @@
 <body>
 
     <!-- include source files here... -->
-    <script src="../vendor/jquery/dist/jquery.min.js"></script>
+    <!-- <script src="../vendor/jquery/dist/jquery.min.js"></script> -->
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
     <script src="../dist/epicenter.min.js"></script>
 
