--- a/tests/index.html
+++ b/tests/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Mocha Spec Runner</title>
+    <title>JSLibs: Mocha Spec Runner</title>
     <link rel="stylesheet" href="vendor/mocha/mocha.css">
 </head>
 <body>
@@ -22,22 +22,7 @@
     <!-- include source files here... -->
     <script src="../vendor/jquery/dist/jquery.min.js"></script>
     <script src="../vendor/underscore/underscore.js"></script>
-
-    <script src="../src/util/query-util.js"></script>
-    <script src="../src/util/run-util.js"></script>
-    <script src="../src/service/url-config-service.js"></script>
-    <script src="../src/service/configuration-service.js"></script>
-    <script src="../src/transport/ajax-http-transport.js"></script>
-    <script src="../src/transport/http-transport-factory.js"></script>
-
-    <script src="../src/store/cookie-store.js"></script>
-    <script src="../src/store/store-factory.js"></script>
-    <script src="../src/service/data-api-service.js"></script>
-
-
-    <script src="../src/service/auth-api-service.js"></script>
-    <script src="../src/service/variables-api-service.js"></script>
-    <script src="../src/service/run-api-service.js"></script>
+    <script src="../dist/epicenter.min.js"></script>
 
     <!-- include spec files here... -->
     <script src="spec/test-query-util.js"></script>
