Moved the cookie handling to the new authentication manager instead of the auth service

--- a/tests/index.html
+++ b/tests/index.html
@@ -18,10 +18,10 @@
         var expect = chai.expect;
         var should = chai.should();
     </script>
+    <script src="vendor/underscore/underscore.js"></script>
 
     <!-- include source files here... -->
     <script src="../vendor/jquery/dist/jquery.min.js"></script>
-    <script src="../vendor/underscore/underscore.js"></script>
     <script src="../dist/epicenter-edge.js"></script>
 
     <!-- include spec files here... -->
