--- a/tests/index.html
+++ b/tests/index.html
@@ -31,6 +31,7 @@
     <script src="spec/test-data-api-service.js"></script>
 
     <script src="spec/test-auth-api-service.js"></script>
+    <script src="spec/test-auth-manager.js"></script>
     <script src="spec/test-run-api-service.js"></script>
     <script src="spec/test-run-api-service-callbacks.js"></script>
     <script src="spec/test-variables-api-service.js"></script>
