--- a/tests/index.html
+++ b/tests/index.html
@@ -32,10 +32,12 @@
 
     <script src="spec/test-auth-api-service.js"></script>
     <script src="spec/test-auth-manager.js"></script>
+    <script src="spec/test-game-api-service.js"></script>
     <script src="spec/test-run-api-service.js"></script>
     <script src="spec/test-run-api-service-callbacks.js"></script>
     <script src="spec/test-variables-api-service.js"></script>
     <script src="spec/test-cookie-store.js"></script>
+
 
     <script>
     // If tests run in a real browser
