Completed functionality for multiplayer strategy

--- a/tests/index.html
+++ b/tests/index.html
@@ -37,6 +37,7 @@
     <script src="spec/test-run-api-service-callbacks.js"></script>
     <script src="spec/test-variables-api-service.js"></script>
     <script src="spec/test-cookie-store.js"></script>
+    <script src="spec/test-multiplayer-strategy.js"></script>
 
 
     <script>
