Added user-api-adapter and tests

--- a/tests/index.html
+++ b/tests/index.html
@@ -65,6 +65,7 @@
     <script src="spec/test-variables-api-service.js"></script>
     <script src="spec/test-cookie-store.js"></script>
     <script src="spec/test-multiplayer-strategy.js"></script>
+    <script src="spec/test-user-api-adapter.js"></script>
 
 
     <script>
