--- a/tests/index.html
+++ b/tests/index.html
@@ -49,6 +49,7 @@
 
     <!-- include source files here... -->
     <script src="../vendor/jquery/dist/jquery.min.js"></script>
+    <script src="../dist/epicenter-multiplayer-dependencies.js"></script>
     <script src="../dist/epicenter-edge.js"></script>
 
     <!-- include spec files here... -->
