basic channel test

--- a/tests/index.html
+++ b/tests/index.html
@@ -67,6 +67,8 @@
     <script src="spec/test-cookie-store.js"></script>
     <script src="spec/test-multiplayer-strategy.js"></script>
 
+    <script src="spec/test-channel.js"></script>
+
 
     <script>
     // If tests run in a real browser
