draft login page

--- a/tests/integration/multiplayer/index.html
+++ b/tests/integration/multiplayer/index.html
@@ -16,6 +16,26 @@
         <h4> Online/offline Check</h4>
         <span> You are currently </span> <em id="status"> </em>
 
+        <form action="">
+          <label for="">Account</label>
+          <input type="text" id="txtAccount"  value="team-naren">
+          <br/
+
+          <label for="">Project</label>
+          <input type="text" id="txtProject" value="multiplayer-test" >
+          <br/
+
+          <label for="">Username</label>
+          <input type="text" id="txtUsername" value="a1" >
+          <br/
+
+          <label for="">Password</label>
+          <input type="text" id="txtPassword" value="a1a1a1a1" >
+          <br/
+          <br/>
+          <button id="btnLogin"> Login </button>
+          <a href="#" id='logout'> Logout</a>
+        </form>
     </div>
     <script src="test-script.js"></script>
 
