--- a/tests/integration/multiplayer/index.html
+++ b/tests/integration/multiplayer/index.html
@@ -11,6 +11,7 @@
     <script src="../../../dist/epicenter-multiplayer-dependencies.js"></script>
     <script src="../../../dist/epicenter-edge.js"></script>
 
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 
     <div id="content">
         <h4> Online/offline Check</h4>
