--- a/tests/integration/multiplayer/index.html
+++ b/tests/integration/multiplayer/index.html
@@ -17,26 +17,37 @@
         <h4> Online/offline Check</h4>
         <span> You are currently </span> <em id="status"> </em>
 
-        <form action="">
-          <label for="">Account</label>
-          <input type="text" id="txtAccount"  value="team-naren">
-          <br/
+        <section>
+          <form action="">
+            <label for="">Account</label>
+            <input type="text" id="txtAccount"  value="team-naren">
+            <br/
 
-          <label for="">Project</label>
-          <input type="text" id="txtProject" value="multiplayer-test" >
-          <br/
+            <label for="">Project</label>
+            <input type="text" id="txtProject" value="multiplayer-test" >
+            <br/
 
-          <label for="">Username</label>
-          <input type="text" id="txtUsername" value="a1" >
-          <br/
+            <label for="">Username</label>
+            <input type="text" id="txtUsername" value="a1" >
+            <br/
 
-          <label for="">Password</label>
-          <input type="text" id="txtPassword" value="a1a1a1a1" >
-          <br/
-          <br/>
-          <button id="btnLogin"> Login </button>
-          <a href="#" id='logout'> Logout</a>
-        </form>
+            <label for="">Password</label>
+            <input type="text" id="txtPassword" value="a1a1a1a1" >
+            <br/
+            <br/>
+            <button id="btnLogin"> Login </button>
+            <a href="#" id='logout'> Logout</a>
+          </form>
+        </section>
+
+        <section>
+            <h4> Group Channel (listening on *) </h4>
+            <textarea id="txtGroupTextAll" id="" cols="30" rows="10"></textarea>
+        </section>
+        <section>
+            <h4> Group Channel (listening on 'sometopic') </h4>
+            <textarea id="txtGroupTextSpecific" id="" cols="30" rows="10"></textarea>
+        </section>
     </div>
     <script src="test-script.js"></script>
 
