install istanbul and create coverage related tasks

--- a/tests/index.html
+++ b/tests/index.html
@@ -49,7 +49,7 @@
 
     <!-- include source files here... -->
     <script src="../vendor/jquery/dist/jquery.min.js"></script>
-    <script src="../dist/epicenter-edge.js"></script>
+    <script src="../dist/epicenter-edge-instrument.js"></script>
 
     <!-- include spec files here... -->
     <script src="spec/test-query-util.js"></script>
