--- a/tests/index.html
+++ b/tests/index.html
@@ -57,6 +57,8 @@
     <script src="spec/test-ajax-http-transport.js"></script>
     <script src="spec/test-data-api-service.js"></script>
 
+    <script src="spec/test-world-manager.js"></script>
+    <script src="spec/test-multiplayer-strategy.js"></script>
     <script src="spec/test-auth-api-service.js"></script>
     <script src="spec/test-auth-manager.js"></script>
     <script src="spec/test-world-api-service.js"></script>
@@ -64,7 +66,6 @@
     <script src="spec/test-run-api-service-callbacks.js"></script>
     <script src="spec/test-variables-api-service.js"></script>
     <script src="spec/test-cookie-store.js"></script>
-    <script src="spec/test-multiplayer-strategy.js"></script>
 
 
     <script>
