--- a/tests/integration/multiplayer/index.html
+++ b/tests/integration/multiplayer/index.html
@@ -40,7 +40,9 @@
           </form>
         </section>
 
+
         <section>
+            <button id="btnBindGroupChannel"> Bind group Channel</button>
             <h4> Group Channel (listening on *) </h4>
             <textarea id="txtGroupTextAll" id="" cols="30" rows="10"></textarea>
         </section>
