base channel manager test

--- a/tests/index.html
+++ b/tests/index.html
@@ -69,7 +69,7 @@
     <script src="spec/test-cookie-store.js"></script>
 
     <script src="spec/test-channel-service.js"></script>
-
+    <script src="spec/test-channel-manager.js"></script>
 
     <script>
     // If tests run in a real browser
