--- a/tests/index.html
+++ b/tests/index.html
@@ -50,7 +50,16 @@
     <!-- include source files here... -->
     <script src="../vendor/jquery/dist/jquery.min.js"></script>
     <script src="../dist/epicenter-multiplayer-dependencies.js"></script>
-    <script src="../dist/epicenter-edge.js"></script>
+
+    <script>
+        //Instrumented doesn't do sourcemaps, so put it in the console. Open up the nicer version in the browser
+         if (navigator.userAgent.indexOf('PhantomJS') ===  -1) {
+            document.write('\x3Cscript type="text/javascript" src="../dist/epicenter-edge.js">\x3C/script>');
+         }
+         else {
+            document.write('\x3Cscript type="text/javascript" src="../dist/epicenter-edge-instrumented.js">\x3C/script>');
+         }
+     </script>
 
     <!-- include spec files here... -->
     <script src="spec/test-query-util.js"></script>
