--- a/tests/index.html
+++ b/tests/index.html
@@ -75,6 +75,7 @@
     <script src="spec/test-run-api-service.js"></script>
     <script src="spec/test-run-api-service-callbacks.js"></script>
     <script src="spec/test-variables-api-service.js"></script>
+    <script src="spec/test-member-api-service.js"></script>
     <script src="spec/test-cookie-store.js"></script>
 
     <script src="spec/test-channel-service.js"></script>
