--- a/tests/index.html
+++ b/tests/index.html
@@ -69,6 +69,8 @@
 
     <script src="spec/test-world-manager.js"></script>
     <script src="spec/test-multiplayer-strategy.js"></script>
+    <script src="spec/test-conditional-creation-strategy.js"></script>
+    <script src="spec/test-persistent-single-player-strategy.js"></script>
     <script src="spec/test-auth-api-service.js"></script>
     <script src="spec/test-auth-manager.js"></script>
     <script src="spec/test-world-api-service.js"></script>
