testing out data api

--- a/tests/integration/multiplayer/index.html
+++ b/tests/integration/multiplayer/index.html
@@ -50,6 +50,14 @@
             <h4> Group Channel (listening on 'sometopic') </h4>
             <textarea id="txtGroupTextSpecific" id="" cols="30" rows="10"></textarea>
         </section>
+
+        <h4> Data API check </h4>
+        <label for=""> Create Collection </label>
+        <input type="text" value="testmay18" id="txtCollName" />
+        <button id="btnCreateCollection"> Create & Bind to collection </button>
+        <br>
+        <button id="btnAddToCollection"> Add random stuff to collection </button>
+
     </div>
     <script src="test-script.js"></script>
 
