--- a/tests/index.html
+++ b/tests/index.html
@@ -82,6 +82,7 @@
 
     <script src="spec/test-channel-service.js"></script>
     <script src="spec/test-channel-manager.js"></script>
+    <script src="spec/test-epicenter-channel-manager.js"></script>
 
     <script>
     // If tests run in a real browser
