--- a/tests/integration/multiplayer/index.html
+++ b/tests/integration/multiplayer/index.html
@@ -56,6 +56,7 @@
         <input type="text" value="testmay18" id="txtCollName" />
         <button id="btnCreateCollection"> Create & Bind to collection </button>
         <br>
+        <input type="text" value="asdf" id="txtTextForData" />
         <button id="btnAddToCollection"> Add random stuff to collection </button>
 
     </div>
