--- a/tests/index.html
+++ b/tests/index.html
@@ -78,6 +78,7 @@
     <script src="spec/test-run-api-service-callbacks.js"></script>
     <script src="spec/test-variables-api-service.js"></script>
     <script src="spec/test-member-api-service.js"></script>
+    <script src="spec/test-asset-api-adapter.js"></script>
     <script src="spec/test-cookie-store.js"></script>
 
     <script src="spec/test-channel-service.js"></script>
