--- a/tests/index.html
+++ b/tests/index.html
@@ -79,6 +79,7 @@
     <script src="spec/test-variables-api-service.js"></script>
     <script src="spec/test-member-api-service.js"></script>
     <script src="spec/test-asset-api-adapter.js"></script>
+    <script src="spec/test-state-api-adapter.js"></script>
     <script src="spec/test-cookie-store.js"></script>
 
     <script src="spec/test-channel-service.js"></script>
