--- a/tests/index.html
+++ b/tests/index.html
@@ -66,6 +66,7 @@
     <script src="spec/test-run-util.js"></script>
     <script src="spec/test-ajax-http-transport.js"></script>
     <script src="spec/test-data-api-service.js"></script>
+    <script src="spec/test-url-config-service.js"></script>
 
     <script src="spec/test-world-manager.js"></script>
     <script src="spec/test-multiplayer-strategy.js"></script>
