--- a/tests/index.html
+++ b/tests/index.html
@@ -87,6 +87,7 @@
     <script src="spec/test-channel-service.js"></script>
     <script src="spec/test-channel-manager.js"></script>
     <script src="spec/test-epicenter-channel-manager.js"></script>
+    <script src="spec/test-env-load.js"></script>
 
     <script>
     // If tests run in a real browser
