--- a/tests/index.html
+++ b/tests/index.html
@@ -83,6 +83,7 @@
     <script src="spec/test-state-api-adapter.js"></script>
     <script src="spec/test-cookie-store.js"></script>
     <script src="spec/test-admin-file-service.js"></script>
+    <script src="spec/test-group-api-service.js"></script>
 
     <script src="spec/test-channel-service.js"></script>
     <script src="spec/test-channel-manager.js"></script>
