--- a/tests/index.html
+++ b/tests/index.html
@@ -81,6 +81,7 @@
     <script src="spec/test-member-api-service.js"></script>
     <script src="spec/test-asset-api-adapter.js"></script>
     <script src="spec/test-state-api-adapter.js"></script>
+    <script src="spec/test-introspection-api-service.js"></script>
     <script src="spec/test-cookie-store.js"></script>
     <script src="spec/test-admin-file-service.js"></script>
 
