--- a/tests/index.html
+++ b/tests/index.html
@@ -52,6 +52,7 @@
     <script src="../dist/epicenter-multiplayer-dependencies.js"></script>
 
     <script>
+        window.SKIP_ENV_LOAD = true;
         //Instrumented doesn't do sourcemaps, so put it in the console. Open up the nicer version in the browser
          if (navigator.userAgent.indexOf('PhantomJS') ===  -1) {
             document.write('\x3Cscript type="text/javascript" src="../dist/epicenter-edge.js">\x3C/script>');
