--- a/tests/index.html
+++ b/tests/index.html
@@ -4,15 +4,15 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>JSLibs: Mocha Spec Runner</title>
-    <link rel="stylesheet" href="vendor/mocha/mocha.css">
+    <link rel="stylesheet" href="node_modules/mocha/mocha.css">
 </head>
 <body>
     <div id ="mocha"></div>
-    <script src="vendor/mocha/mocha.js"></script>
+    <script src="node_modules/mocha/mocha.js"></script>
     <script>mocha.setup('bdd')</script>
-    <script src="vendor/chai/chai.js"></script>
-    <script src="vendor/sinon-chai/lib/sinon-chai.js"></script>
-    <script src="vendor/sinon/index.js"></script>
+    <script src="node_modules/chai/chai.js"></script>
+    <script src="node_modules/sinon/pkg/sinon.js"></script>
+    <script src="node_modules/sinon-chai/lib/sinon-chai.js"></script>
     <script>
         var assert = chai.assert;
         var expect = chai.expect;
@@ -45,10 +45,10 @@
           };
         }
     </script>
-    <script src="vendor/underscore/underscore.js"></script>
+    <script src="node_modules/lodash/dist/lodash.js"></script>
 
     <!-- include source files here... -->
-    <script src="../vendor/jquery/dist/jquery.min.js"></script>
+    <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="../dist/epicenter-multiplayer-dependencies.js"></script>
 
     <script>
