--- a/tests/integration/multiplayer/index.html
+++ b/tests/integration/multiplayer/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-    <script src="../../../vendor/jquery/dist/jquery.min.js"></script>
+    <script src="../../node_modules/jquery/dist/jquery.min.js"></script>
     <script src="../../../dist/epicenter-multiplayer-dependencies.js"></script>
     <script src="../../../dist/epicenter-edge.js"></script>
 
