--- a/tests/integration/run-strategies/index.html
+++ b/tests/integration/run-strategies/index.html
@@ -8,7 +8,7 @@
 <body>
     <script>
         var rm = new F.manager.RunManager({
-            strategy: 'baseline',
+            strategy: 'new-if-stepped',
             run: {
                 account: 'jaimedp',
                 project: 'glasses',
