--- a/tests/integration/run-strategies/test-last-unsaved/index.html
+++ b/tests/integration/run-strategies/test-last-unsaved/index.html
@@ -1,11 +1,12 @@
 <!doctype html>
 <html>
 <head>
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
-    <script src="../../../dist/epicenter-edge.js"></script>
+    <script src="../../../../dist/epicenter-edge.js"></script>
 </head>
-<body>
+<body class="container-fluid">
     <section>
       <form action="">
         <label for="">Account</label>
