renamed integration tests for clarity

--- a/tests/integration/multiplayer/index.html
+++ b/tests/integration/multiplayer/index.html
@@ -60,7 +60,7 @@
         <button id="btnAddToCollection"> Add random stuff to collection </button>
 
     </div>
-    <script src="test-script.js"></script>
+    <script src="integration-test-multiplayer.js"></script>
 
 </body>
 </html>
