--- a/tests/integration/run-strategies/test-last-unsaved/index.html
+++ b/tests/integration/run-strategies/test-last-unsaved/index.html
@@ -44,6 +44,6 @@
     </div>
 
     <button id="btnSaveAndSimulate">Save and simulate</button>
-    <script src="./test-run-strategies.js"></script>
+    <script src="./integration-test-run-strategies.js"></script>
 </body>
 </html>
