--- a/tests/integration/assets/index.html
+++ b/tests/integration/assets/index.html
@@ -117,7 +117,7 @@
             </div><!-- /.modal-content -->
         </div><!-- /.modal-dialog -->
     </div><!-- /.modal -->
-    <script src="assets-test.js"></script>
+    <script src="integration-test-assets.js"></script>
 
 </body>
 </html>
