update scenario manager syntax

--- a/tests/integration/scenario-manager/index.html
+++ b/tests/integration/scenario-manager/index.html
@@ -77,6 +77,6 @@
     </div>
     
 
-    <script src="./test-scenario-manager.js"></script>
+    <script src="./integration-test-scenario-manager.js"></script>
 </body>
 </html>
