--- a/tests/index.html
+++ b/tests/index.html
@@ -90,6 +90,7 @@
     <script src="spec/test-channel-service.js"></script>
     <script src="spec/test-channel-manager.js"></script>
     <script src="spec/test-run-manager.js"></script>
+    <script src="spec/test-saved-runs-manager.js"></script>
     <script src="spec/test-epicenter-channel-manager.js"></script>
     <script src="spec/test-env-load.js"></script>
 
