failing scen tests

--- a/tests/index.html
+++ b/tests/index.html
@@ -91,6 +91,7 @@
     <script src="spec/test-channel-manager.js"></script>
     <script src="spec/test-run-manager.js"></script>
     <script src="spec/test-saved-runs-manager.js"></script>
+    <script src="spec/test-scenario-manager.js"></script>
     <script src="spec/test-epicenter-channel-manager.js"></script>
     <script src="spec/test-env-load.js"></script>
 
