--- a/tests/integration/multiplayer/index.html
+++ b/tests/integration/multiplayer/index.html
@@ -127,7 +127,7 @@
     </section>
 
 
-    <h4>World API Notifications. Not currently working, think issue is in test-scripts</h4>
+    <h4>World API Notifications. </h4>
     <section class="row">
         <div class="col-xs-6">
             <button id="btnBindToWorld">Bind to WorldAPI</button>
@@ -148,6 +148,7 @@
         </div>
         <div class="col-xs-6 instructions">
             <ol>
+                <li> Make sure users are assigned to worlds</li>
                 <li> Login </li>
                 <li> Click on the bind button</li>
                 <li> Do the same in another window and see presence notifications</li>
