extract common test scrips

--- a/tests/integration/multiplayer/index.html
+++ b/tests/integration/multiplayer/index.html
@@ -156,6 +156,7 @@
         </div>
     </section>
 
+    <script src="../common.js"></script>
     <script src="integration-test-multiplayer.js"></script>
 
 </body>
