working baseline meta

--- a/tests/integration/scenario-manager/index.html
+++ b/tests/integration/scenario-manager/index.html
@@ -17,7 +17,7 @@
                 <br/>
 
                 <label for="">Project</label>
-                <input type="text" id="txtProject" value="multiplayer-test" >
+                <input type="text" id="txtProject" value="authenticated-smart-watch" >
                 <br/>
 
                 <label for="">Username</label>
