--- a/tests/integration/run-strategies/test-last-unsaved/index.html
+++ b/tests/integration/run-strategies/test-last-unsaved/index.html
@@ -16,7 +16,7 @@
                 <br/>
 
                 <label for="">Project</label>
-                <input type="text" id="txtProject" value="multiplayer-test" >
+                <input type="text" id="txtProject" value="authenticated-smart-watch" >
                 <br/>
 
                 <label for="">Username</label>
