--- a/tests/integration/multiplayer/presence.html
+++ b/tests/integration/multiplayer/presence.html
@@ -59,7 +59,7 @@
 
 	<h4>Presence Api</h4>
     <section class="row">
-  	<h3>Mark Online</h3>
+  	<h3>Mark Online / Offline</h3>
     <button id="btnMarkOnline">Mark Online Without UserId</button>
 		<button id="btnMarkOnlineWithId">Mark Online With UserId</button>
     <br />
@@ -68,6 +68,28 @@
     <h3>Get Status</h3>
     <button id="btnGetStatus">Get Status</button>
     <p id="status"></p>
+    <h3>Group Channel Test</h3>
+    <h4>User1</h4>
+    <button id="subscribeToChannel">Subscribe</button>
+    <button id="unsubscribeToChannel">Unsubscribe</button>
+    <button id="publish">Publish</button>
+    <p id="publishGroupStatus">Status: </p>
+    <h4>User2</h4>
+    <button id="subscribeToChannel2">Subscribe</button>
+    <button id="unsubscribeToChannel2">Unsubscribe</button>
+    <p id="publishGroupStatus2">Status: </p>
+    <h3>Presence Channel Test</h3>
+    <h4>User1</h4>
+    <button id="subscribeToPresenceChannel">Subscribe</button>
+    <button id="unsubscribeToPresenceChannel">Unsubscribe</button>
+    <button id="publishPresence">Publish (should have no effect)</button>
+    <p id="publishStatus">Status: </p>
+    <h4>User2</h4>
+    <button id="subscribeToPresenceChannel2">Subscribe</button>
+    <button id="unsubscribeToPresenceChannel2">Unsubscribe</button>
+    <p id="publishStatus2">Status: </p>
     </section>
+
+
     <script src="presence-script.js"></script>
 </body>
