--- a/tests/integration/scenario-manager/index.html
+++ b/tests/integration/scenario-manager/index.html
@@ -31,6 +31,11 @@
                 <label for="">Model</label>
                 <input type="text" id="txtModel" value="model.vmf" >
                 <br/>
+
+                <label for="">Server</label>
+                <input type="text" id="txtServer" value="" >
+                <br/>
+
                 <button id="btnLogin"> Login </button>
                 <a href="#" id='logout'> Logout</a>
               </form>
