refactor presence + add username to getStatus

--- a/tests/integration/multiplayer/presence.html
+++ b/tests/integration/multiplayer/presence.html
@@ -88,6 +88,7 @@
     <button id="subscribeToPresenceChannel2">Subscribe</button>
     <button id="unsubscribeToPresenceChannel2">Unsubscribe</button>
     <p id="publishStatus2">Status: </p>
+    <p id="channel-status"></p>
     </section>
 
 
