--- a/tests/index.html
+++ b/tests/index.html
@@ -73,7 +73,7 @@
     <script src="spec/strategies/test-conditional-creation-strategy.js"></script>
     <script src="spec/strategies/test-reuse-across-sessions.js"></script>
     <script src="spec/strategies/test-reuse-last-initialized-strategy.js"></script>
-
+    <script src="spec/strategies/test-strategy-utils.js"></script>
     <script src="spec/test-world-manager.js"></script>
     <script src="spec/test-auth-api-service.js"></script>
     <script src="spec/test-auth-manager.js"></script>
