add additional comments on presence integration test

--- a/tests/integration/multiplayer/presence.html
+++ b/tests/integration/multiplayer/presence.html
@@ -53,11 +53,16 @@
                   <li>A team account</li>
                   <li>Push channel turned on</li>
               </ul>
+
           </div>
       </div>
     </section>
 
 	<h4>Presence Api</h4>
+    <section>
+        <p>Testing the presence service. Specifically testing, markOnline, markOffline, getStatus and presence channel</p>
+        <p>Try to test group channel and presence channel separately</p>
+    </section>
     <section class="row">
   	<h3>Mark Online / Offline</h3>
     <button id="btnMarkOnline">Mark Online Without UserId</button>
@@ -88,7 +93,7 @@
     <button id="subscribeToPresenceChannel2">Subscribe</button>
     <button id="unsubscribeToPresenceChannel2">Unsubscribe</button>
     <p id="publishStatus2">Status: </p>
-    <p id="channel-status"></p>
+    <p>Channel Status: <span id="channel-status"></span></p>
     </section>
 
 
