--- a/tests/integration/multiplayer/consensus/index.html
+++ b/tests/integration/multiplayer/consensus/index.html
@@ -67,11 +67,12 @@
         <input type="text" id="txtBreakpoint" value="bar" />
 
         <button id="btnConsensusCreate">Create Consensus Point</button>
-
+        <button id="btnConsensusDelete">Delete Consensus Point</button>
     </section>
 
     <section>
-        <button id="btnConsensusOperationSubmit">Submit for operation</button>
+        <button id="btnConsensusOperationSubmit">Submit for operation step</button>
+        <button id="btnConsensusOperationRevoke">Revoke operation step</button>
     </section>
     <section>
         <button id="btnReset">Reset</button>
