rename to consensus and consensusGroup for simplicity

--- a/tests/integration/multiplayer/consensus/index.html
+++ b/tests/integration/multiplayer/consensus/index.html
@@ -52,11 +52,7 @@
               </form>
           </div>
           <div class="col-xs-6">
-              Make sure you enter info for 
-              <ul>
-                  <li>A team account</li>
-                  <li>Push channel turned on</li>
-              </ul>
+              Make sure you enter info for a multiplayer project with push channel turned on.
           </div>
       </div>
     </section>
@@ -78,6 +74,7 @@
             </section>
             <section>
                 <button id="btnReset">Reset</button>
+                <button id="btnForceClose">Force Close</button>
             </section>
         </div>
         <div class="col-xs-6">
