--- a/tests/integration/multiplayer/consensus/index.html
+++ b/tests/integration/multiplayer/consensus/index.html
@@ -59,10 +59,10 @@
     <div class="row">
         <div class="col-xs-6">
             <section>
-                <label for="">ConsensusName</label>
-                <input type="text" id="txtConsensus" value="foo" />
-                <label for="">Breakpointname</label>
-                <input type="text" id="txtBreakpoint" value="bar" />
+                <label for="">Consensus Group Name</label>
+                <input type="text" id="txtConsensusGroup" value="foo" />
+                <label for="">Consensus Name</label>
+                <input type="text" id="txtConsensus" value="bar" />
 
                 <button id="btnConsensusCreate">Create Consensus Point</button>
                 <button id="btnConsensusDelete">Delete Consensus Point</button>
