stub update defaults

--- a/tests/integration/multiplayer/consensus/index.html
+++ b/tests/integration/multiplayer/consensus/index.html
@@ -69,6 +69,9 @@
             </section>
 
             <section>
+                <button id="btnUpdateDefaults">Update defaults</button>
+            </section>
+            <section>
                 <button id="btnConsensusOperationSubmit">Submit for operation step</button>
                 <button id="btnConsensusOperationRevoke">Revoke operation step</button>
             </section>
