--- a/tests/integration/timer/index.html
+++ b/tests/integration/timer/index.html
@@ -88,6 +88,7 @@
        <div class="col-xs-12">
            <h4>Controls</h4>
            <button id="btnstart">Start</button>
+           <button id="btnUpdateTime">Update</button>
        </div>
    </div>
     
