remove update, better error catching

--- a/tests/integration/timer/index.html
+++ b/tests/integration/timer/index.html
@@ -88,6 +88,8 @@
        <div class="col-xs-12">
            <h4>Controls</h4>
            <button id="btnstart">Start</button>
+           <button id="btnpause">Pause</button>
+           <button id="btnresume">Resume</button>
            <button id="btnUpdateTime">Update</button>
        </div>
    </div>
