--- a/tests/integration/timer/index.html
+++ b/tests/integration/timer/index.html
@@ -56,43 +56,32 @@
           </div>
       </div>
     </section>
-   <div class="row">
-       <div class="col-xs-4">
-           <h6>Create</h6>
-           <div class="form">
-                <div class="form-group">
-                    <label for="scope">Scope</label>
-                    <select id="scope">
-                        <option value="GROUP">GROUP</option>
-                        <option value="USER">USER</option>
-                        <option value="RUN">RUN</option>
-                    </select>
-                </div>
-               <div class="form-group">
-                    <label for="txtTimeLimit">Time limit (minutes)</label>
-                    <input type="text" id="txtTimeLimit" class="form-control" value="2" />
-                </div>
-                <button class="btn btn-primary" id="btnCreate">Create timer</button>
-                <button class="btn" id="btnDelete">Remove</button>
-           </div>
-       </div>
-   </div>
-   <div class="row">
-       <div class="col-xs-12">
-           <strong>Time left</strong>
-           <span id="mins"></span>:
-           <span id="seconds"></span>
-       </div>
-   </div>
-   <div class="row">
-       <div class="col-xs-12">
-           <h4>Controls</h4>
-           <button id="btnstart">Start</button>
-           <button id="btnpause">Pause</button>
-           <button id="btnresume">Resume</button>
-           <button id="btnUpdateTime">Update</button>
-       </div>
-   </div>
+    <section data-scope="group">
+      <h3>Group Scope</h3>
+      <div class="row">
+          <div class="col-xs-4">
+              <div class="form">
+                  <div class="form-group">
+                       <label for="txtTimeLimit">Time limit (minutes)</label>
+                       <input type="text" class="form-control time-limit" value="2" />
+                   </div>
+                   <button class="btn btn-primary btn-create">Create timer</button>
+                   <button class="btn btn-delete">Delete</button>
+              </div>
+          </div>
+          <div class="col-xs-8">
+              <strong>Time left</strong>
+              <h5 id="mins"></h5>:
+              <h5 id="seconds"></h5>
+              <div>
+                <button class="btnstart">Start</button>
+                <button class="btnpause">Pause</button>
+                <button class="btnresume">Resume</button>
+                <button class="btnUpdateTime">Update</button>
+              </div>
+          </div>
+      </div>
+    </section>
     
 
     <script src="../common.js"></script>
