--- a/tests/index.html
+++ b/tests/index.html
@@ -53,14 +53,9 @@
 
     <script>
         window.SKIP_ENV_LOAD = true;
-        //Instrumented doesn't do sourcemaps, so put it in the console. Open up the nicer version in the browser
-         if (navigator.userAgent.indexOf('PhantomJS') ===  -1) {
-            document.write('\x3Cscript type="text/javascript" src="../dist/epicenter-edge.js">\x3C/script>');
-         }
-         else {
-            document.write('\x3Cscript type="text/javascript" src="../dist/epicenter-edge-instrumented.js">\x3C/script>');
-         }
      </script>
+
+    <script src="../dist/epicenter-edge.js"></script>
 
     <!-- include spec files here... -->
     <script src="spec/test-query-util.js"></script>
