--- a/tests/index.html
+++ b/tests/index.html
@@ -85,6 +85,7 @@
     <script src="spec/test-admin-file-service.js"></script>
     <script src="spec/test-group-api-service.js"></script>
     <script src="spec/test-time-api-service.js"></script>
+    <script src="spec/test-timer-service.js"></script>
 
     <script src="spec/test-channel-service.js"></script>
     <script src="spec/test-channel-manager.js"></script>
